--- a/css/index.css
+++ b/css/index.css
@@ -1137,4 +1137,70 @@ a:-webkit-any-link {
     .t-input-group {
         margin-left: 8px;
     }
+
+    .t-select {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content__center {
+        height: 26vh;
+    }
+
+    .questionnaire_background {
+        padding-top: 30px;
+    }
+
+    .content_head {
+        font-size: 24px;
+    }
+
+    .content_link a {
+        font-size: 18px;
+    }
+
+    .t-section__topwrapper {
+        margin-bottom: 35px;
+    }
+
+    .t-descr_md {
+        font-size: 18px;
+    }
+
+    .text_style {
+        width: 270px;
+    }
+    .text_style_sity {
+        width: 270px;
+    }
+    .text_style_n {
+        width: 270px;
+    }
+    .row1 {
+        font-size: 28px;
+        margin-bottom: 25px;
+    }
+
+    .row3 {
+        display: none;
+    }
+    .row4 {
+        display: flex;
+    }
+    .t-input-group {
+        margin-left: 8px;
+    }
+
+    .t-select {
+        font-size: 13px;
+    }
+
+    .t-input-group_cb{
+        margin-left: 23px;
+    }
+
+    .t-input-group_qn{
+        margin-left: 23px;
+    }
 }
